trae datos de la empresa en la edicion

--- a/recupero/templates/recupero/factura_create_form.html
+++ b/recupero/templates/recupero/factura_create_form.html
@@ -154,7 +154,10 @@
                 url: url,
                 dataType: 'json',
                 success: function (data) {
-
+                    $("#id_nombre").val(data.nombre);
+                    $("#id_cuit").val(data.cuit);
+                    $("#id_direccion").val(data.direccion);
+                    $("#id_ultimo_recibo_de_sueldo").val(data.ultimo_recibo_de_sueldo);
                 },
                 complete: function () {
                 },
